--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Test</string>
     <string name="dateText">TextView</string>
+    <string name="dateUpdateButton">Update</string>
+    <string name="transButton">Trans</string>
 </resources>
